tests/invalid/duplicate_field.intent
module DupFieldTest

entity Account {
  id: UUID
  name: String
  name: Email
}
